business profile service with aws sns-sqs integeration

--- a/bizprofile/.gitignore
+++ b/bizprofile/.gitignore
@@ -1,3 +1,18 @@
+HELP.md
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### VS Code ###
+.vscode/
+
 # Compiled class file
 *.class
 
@@ -19,29 +34,16 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-
 HELP.md
 target/
 !**/src/main/**/target/
 !**/src/test/**/target/
-
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
+/.mvn/wrapper/maven-wrapper.properties
+/.mvn/wrapper/maven-wrapper.jar
+/.mvn/wrapper/MavenWrapperDownloader.java
 
 ### VS Code ###
 .vscode/
 
 ### OS ###
 .DS_Store
-
-### SubProjects ###
-**/mvn/wrapper/maven-wrapper.jar
-**/mvnw
-**/mvnw.cmd
-*/.mvn/wrapper/maven-wrapper.properties
-*/.mvn/wrapper/maven-wrapper.jar
-*/.mvn/wrapper/MavenWrapperDownloader.java
