--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@ target/
 */.mvn/wrapper/maven-wrapper.properties
 */.mvn/wrapper/maven-wrapper.jar
 */.mvn/wrapper/MavenWrapperDownloader.java
+
+*/src/main/resources/application.yml
